updated startpage with working button

--- a/snoop/index.html
+++ b/snoop/index.html
@@ -9,7 +9,7 @@
     <div id="app">
       <div id="container">
         <div id="buttoncontainer">
-          <img src="button.png" id="startbutton" onclick="launch()"/>
+          <img src="button.png" id="startbutton"/>
         </div>
       </div>
     </div>
